# nicoblog

./: .gitignore  Dockerfile  Gemfile  LICENSE  README.md  docker-compose.yml  manage.py  setup.cfg  setup.py
app/models/: article_content.rb  article_title.rb  blog_language.rb
app/views/layouts/: application.html.erb
config/: application.rb  cable.yml  credentials.yml.enc
config/environments/: production.rb
config/initializers/: session_store.rb
db/: schema.rb
db/migrate/: 20230528011611_create_articles.rb  20230528011742_create_blog_languages.rb  20230528012141_create_article_titles.rb  20230528012557_create_article_contents.rb  20230528013613_create_users.rb
lib/tasks/: blog_user.rake
nicoblog_blog/: admin.py  apps.py  models.py
nicoblog_blog/migrations/: 0001_initial.py  0002_remove_blogarticle_content_remove_blogarticle_title_and_more.py
nicoblog_site/: asgi.py  settings.py  urls.py  wsgi.py
test/fixtures/: article_contents.yml  users.yml
test/models/: article_content_test.rb  article_title_test.rb  blog_language_test.rb
