[metadata]
name = nicoblog
version = 0.0.1a1
description = Nicoblog Django application
long_description = file: README.md
long_description_content_type = text/markdown
author = MH35
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 4.2.1
    psycopg[binary] >= 3.1.9

[options.extras_require]
dev =
    pylint >= 2.16.1
    pycodestyle >= 2.10.0
    mypy >= 1.0.0
    flake8 >= 6.0.0
    flake8-isort >= 6.0.0
    flake8-bugbear >= 23.1.20
    flake8-builtins >= 2.1.0
    flake8-unused-arguments >= 0.0.13
    flake8-pytest-style >= 1.7.0
    pep8-naming >= 0.13.3
    black >= 23.1.0
    isort >= 5.12.0
    types-python-dateutil >= 2.8.19.6
test =
    pytest >= 7.2.1
    pytest-cov >= 4.0.0
doc =
    Sphinx >= 6.1.3
